--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   rive: ^0.10.1
   animated_text_kit: ^4.2.2
   audioplayers: ^3.0.0
+  flutter_svg: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/rive/moon_scan.riv
     - assets/mp3/intro.mp3
+    - assets/img/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
